<resources>
    <string name="app_name">Kalkulator</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="bksp">C</string>
    <string name="ac">AC</string>
    <string name="plusminus">+/-</string>
    <string name="slash">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="wyj_cie">Wyjście</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="podstawowy">Podstawowy</string>
    <string name="zaawansowany">Zaawansowany</string>
    <string name="informacje">Informacje</string>
    <string name="aboutTextTitle">Aplikacja Kalkulator</string>
    <string name="aboutTextAuthor">Kamil Michalski</string>
    <string name="aboutTextDescription">Ta aplikacja pozwala wykonywać działania matematyczne na podstawowym jak i na zaawansowanym kalkulatorze</string>
    <string name="start_value">0</string>
    <string name="divide_error">Nie wolno dzielić przez zero</string>
    <string name="notation_error">Liczby zapisane są w notacji którą nie obsługuje kalkulatoor</string>
    <string name="size_error">Rozmiar działania przekracza 17 znaków</string>
    <string name="calculation_error">Błąd podczas obliczeń</string>
    <string name="percent">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sqrt">sqrt</string>
    <string name="x_y">x^y</string>
    <string name="x_2">x^2</string>
</resources>