<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/advanceCalc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvanceCalculator">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="10dp"
        android:maxLines="1"
        android:text="@string/start_value"
        android:textAlignment="viewEnd"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow style="@style/buttons_row">

            <Button
                android:id="@+id/buttonSin"
                style="@style/Rounded.Button"
                android:text="@string/sin" />

            <Button
                android:id="@+id/buttonCos"
                style="@style/Rounded.Button"
                android:text="@string/cos" />

            <Button
                android:id="@+id/buttonTan"
                style="@style/Rounded.Button"
                android:text="@string/tan" />

            <Button
                android:id="@+id/buttonLn"
                style="@style/Rounded.Button"
                android:text="@string/ln" />
        </TableRow>

        <TableRow style="@style/buttons_row">

            <Button
                android:id="@+id/buttonLog"
                style="@style/Rounded.Button"
                android:text="@string/log" />

            <Button
                android:id="@+id/buttonSqrt"
                style="@style/Rounded.Button"
                android:text="@string/sqrt" />

            <Button
                android:id="@+id/buttonPow"
                style="@style/Rounded.Button"
                android:text="@string/x_y" />

            <Button
                android:id="@+id/buttonPow2"
                style="@style/Rounded.Button"
                android:text="@string/x_2" />
        </TableRow>

        <TableRow style="@style/buttons_row">

            <Button
                android:id="@+id/buttonBksp"
                style="@style/Rounded.Button"
                android:text="@string/bksp" />

            <Button
                android:id="@+id/buttonClear"
                style="@style/Rounded.Button"
                android:text="@string/ac" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/Rounded.Button"
                android:text="@string/equals" />
        </TableRow>

        <TableRow style="@style/buttons_row">

            <Button
                android:id="@+id/button7"
                style="@style/Rounded.Button"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button8"
                style="@style/Rounded.Button"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button9"
                style="@style/Rounded.Button"
                android:text="@string/_9" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Rounded.Button"
                android:text="@string/slash" />
        </TableRow>

        <TableRow style="@style/buttons_row">

            <Button
                android:id="@+id/button4"
                style="@style/Rounded.Button"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button5"
                style="@style/Rounded.Button"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button6"
                style="@style/Rounded.Button"
                android:text="@string/_6" />

            <Button
                android:id="@+id/buttonMultiplication"
                style="@style/Rounded.Button"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow style="@style/buttons_row">

            <Button
                android:id="@+id/button1"
                style="@style/Rounded.Button"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button2"
                style="@style/Rounded.Button"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button3"
                style="@style/Rounded.Button"
                android:text="@string/_3" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Rounded.Button"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonComa"
                style="@style/Rounded.Button"
                android:text="@string/dot" />

            <Button
                android:id="@+id/button0"
                style="@style/Rounded.Button"
                android:text="@string/_0" />

            <Button
                android:id="@+id/buttonPlusMinus"
                style="@style/Rounded.Button"
                android:text="@string/plusminus" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Rounded.Button"
                android:text="@string/plus" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>