<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/kalkulator"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSimple"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSimple"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:text="@string/podstawowy" />

        <Button
            android:id="@+id/buttonAdvance"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:text="@string/zaawansowany" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:text="@string/informacje" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:text="@string/wyj_cie" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>